添加解析b3dm文件中的gltf模型

--- a/index.html
+++ b/index.html
@@ -432,6 +432,9 @@
                     <li class="sub_menu" onclick="sildMenuItemClick(event)">
                         <a href="#tools-3dtiles_download" class ="route"><span>爬取网络3DTiles数据</span></a>
                     </li>
+                    <li class="sub_menu" onclick="sildMenuItemClick(event)">
+                        <a href="#tools-transb3dm_to_gltf" class ="route"><span>b3dm中提取gltf模型</span></a>
+                    </li>
                 </ul>
             </li>
             <li class="root_menu">
@@ -583,6 +586,13 @@
                         <a href ="./tools/3dtiles_download.py" target="_blank">
                             <span class="des">爬取网络3DTiles数据</span>
                             <img class="img" src="./assets/thumb/tools-3dtiles_download.png" >
+                        </a>
+                    </div>
+                    <a name="tools-transb3dm_to_gltf"> </a>
+                    <div class="cart" >
+                        <a href ="./tools/transb3dm_to_gltf.py" target="_blank">
+                            <span class="des">b3dm中提取gltf模型</span>
+                            <img class="img" src="./assets/thumb/tools-transb3dm_to_gltf.png" >
                         </a>
                     </div>
                 </div>
