--- a/index_list.html
+++ b/index_list.html
@@ -33,5 +33,9 @@
     <a href ="3dtiles/load_point_cloud.html">加载点云数据</a>
     <br />
     <a href ="tools/3dtiles_download.py">爬取网络3DTiles数据</a>
+    <br />
+    <a href ="tools/transb3dm_to_gltf.py">从b3dm中提取gltf模型</a>
+    <br />
+    <a href ="plugins/cesium_zh.html">汉化插件</a>
 </body>
 </html>
